feat: create documentation swagger for forgot password
